--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -10,7 +10,7 @@
     android:layout_columnWeight="1"
     android:layout_gravity="fill"
     >
-
+    <!--RadioButton-->
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
