--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -8,9 +8,9 @@
     android:columnCount="2"
     tools:context="com.example.priya.androidlabs.ListItemsActivity"
     android:layout_columnWeight="1"
-    android:layout_gravity="fill"
-    >
-    <!--RadioButton-->
+    android:layout_gravity="fill">
+
+
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,13 +27,13 @@
 
         />
 
-     <Switch
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_columnWeight="1"
-         android:text="@string/Switch"
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
+        android:text="@string/Switch"
 
-         />
+        />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -43,3 +43,6 @@
         android:src="@android:drawable/ic_menu_camera" />
 
 </GridLayout>
+
+
+
