--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:text="@string/Login"/>
 
     <EditText
+        android:id="@+id/EmailField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Login Name"
@@ -25,19 +26,26 @@
         android:text="@string/Password"
         />
 
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Login"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/flag"
 
+
         />
+
 
 
 </LinearLayout>
