--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -26,6 +26,14 @@
         tools:layout_editor_absoluteY="274dp"
         tools:ignore="MissingConstraints" />
 
+ <Button
+     android:id="@+id/StartChat"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="StartChat"
+
+
+     />
 
 
 
