--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -17,7 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
 
         />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
@@ -27,7 +26,7 @@
         tools:layout_editor_absoluteY="274dp"
         tools:ignore="MissingConstraints" />
 
- <Button
+    <Button
      android:id="@+id/StartChat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
@@ -38,6 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WeatherForecast"
+        />
+    <Button
+        android:id="@+id/ToolBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TestToolbar"
+
         />
 
 
